--- a/src/index.css
+++ b/src/index.css
@@ -7,30 +7,20 @@
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 100 900;
+  font-weight: normal;
   font-display: swap;
-  src: url('/fonts/Montserrat-VariableFont_wght.woff2') format('woff2-variations');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('/fonts/lato.woff2') format('woff2-variations');
 }
 
 /* Import Vazirmatn font for RTL languages */
 @font-face {
   font-family: 'Vazirmatn';
   font-style: normal;
-  font-weight: 100 900;
+  font-weight: normal;
   font-display: swap;
-  src: url('/fonts/Vazirmatn-VariableFont_wght.woff2') format('woff2-variations');
-  unicode-range: U+0600-06FF, U+200C-200E, U+2010-2011, U+204F, U+2E41, U+FB50-FDFF, U+FE80-FEFC;
+  src: url('/fonts/vazir.woff2') format('woff2-variations');
 }
 
-@font-face {
-  font-family: 'Vazirmatn';
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url('/fonts/Vazirmatn-VariableFont_wght-FD.woff2') format('woff2-variations');
-  unicode-range: U+0600-06FF, U+200C-200E, U+2010-2011, U+204F, U+2E41, U+FB50-FDFF, U+FE80-FEFC;
-}
 
 @layer base {
   :root {
