--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,41 @@
   }
 }
 
+ #logoh{
+        fill: #2D59C3;
+        stroke: #2D59C3
+    }
+
+#logoh {
+    fill-opacity: 1;
+    stroke-width: 0;
+    stroke-dasharray: 100% 0;
+    animation: stroke-offset 3s ease-out
+}
+
+@keyframes stroke-offset {
+    0% {
+        fill-opacity: 0;
+        stroke-width: 0;
+        stroke-dasharray: 0 100%
+    }
+
+    25% {
+        stroke-width: 1px
+    }
+
+    50% {
+        fill-opacity: 0
+    }
+
+    75% {
+        stroke-width: 2px
+    }
+
+    100% {
+        stroke-width: 0
+    }
+}
 @layer utilities {
   .font-persian {
     font-family: 'Vazirmatn', sans-serif;
